已生成数据模型，完成登陆注册功能。

--- a/src/SportShop/Views/Home/Index.cshtml
+++ b/src/SportShop/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
         <div class="top-head">
             <ul>
                 <li><a href="account.html"><span class="glyphicon glyphicon-user"></span>我的账户</a></li>
-                <li><a href="login.html"><span class="glyphicon glyphicon-lock"></span>注册/登陆</a></li>
+                <li><span class="glyphicon glyphicon-lock"></span><a asp-controller="account" asp-action="register">注册/</a><a asp-controller="account" asp-action="login">登陆</a></li>
                 <li><a href="cart.html"><span class="glyphicon glyphicon-shopping-cart"></span>购物车</a><span class="badge">0</span></li>
                 <li><a href="favorites.html">收藏夹<span class="caret"></span></a></li>
                 <li><a href="#">订单管理<span class="caret"></span></a></li>
